styles.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap');

/* Setting style variables */
:root {
    --rose-800: #7A284E;
    --rose-50: #FFF7FB;
    --stone-900: #312E2C;
    --stone-600: #5F564D;
    --stone-150: #E3DDD7;
    --stone-100: #F3E5D7;
    --brown-800: #854632;

    --spacing-1600: 128px;
    --spacing-600: 48px;
    --spacing-500: 40px;
    --spacing-400: 32px;
    --spacing-300: 24px;
    --spacing-200: 16px;
    --spacing-150: 12px;
    --spacing-100: 8px;

}

/* Setting Text Presets from design file */

.text-preset-1 {
    font-family: 'Young Serif';
    font-size: 40px;
    line-height: 100%;
    letter-spacing: 0px;
}

.text-preset-2 {
    font-family: 'Young Serif';
    font-size: 28px;
    line-height: 100%;
    letter-spacing: 0px;
}

.text-preset-3 {
    font-family: 'Outfit';
    font-size: 20px;
    line-height: 100%;
    letter-spacing: 0px;
    font-weight: 600;
}

.text-preset-4 {
    font-family: 'Outfit';
    font-size: 16px;
    line-height: 100%;
    letter-spacing: 0px;
}

.text-preset-4b {
    font-family: 'Outfit';
    font-size: 16px;
    line-height: 100%;
    letter-spacing: 0px;
    font-weight: 700;
}

/* Content styling */

* {
    max-width: 100%;
    height: auto;
}

h1, h2, h3, p {
    margin: 0;
    all: unset;
}

html, body {
    background-color: var(--stone-100);
    height: max-content;
    display: flex;
    justify-content: center;
    align-content: center;
    margin: 0;
}

.main-container {
    background-color: white;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    padding: 40px;
    min-width: 375px;
    width: 736px;
    height: max-content;
    margin-top: 128px;
    margin-bottom: 128px;
    margin-right: 76px;
    margin-left: 76px;
    gap: 40px;
    border-radius: 24px;
}

h1 {
    font-family: 'Young Serif';
    font-size: 40px;
    line-height: 100%;
    letter-spacing: 0px;
    color: var(--stone-900);
}

h2 {
    font-family: 'Young Serif';
    font-size: 28px;
    line-height: 100%;
    letter-spacing: 0px;
    color: var(--brown-800);
}

h3 {
    font-family: 'Outfit';
    font-size: 20px;
    line-height: 100%;
    letter-spacing: 0px;
    font-weight: 600;
    color: var(--rose-800);
}

ul, ol {
    padding: 0;
}

li {
    padding: 8px;
    color: var(--stone-600);
    list-style-position:inside;
}

li span {
    margin-left: 12px;
}

ol li::marker {
    color: var(--brown-800);
    font-weight: 700;
}

.top-image {
    border-radius: 12px;
}

.content {
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.overview {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.description {
    color: var(--stone-600)
}

.prep {
    background-color: var(--rose-50);
    padding: 24px;
    border-radius: 12px;
}

.prep li::marker {
    color: var(--rose-800);
}

.prep-list {
    margin-bottom: 0;
}

.ingredients, .instructions {
    border-bottom: 1px solid var(--stone-150);
}

.nutrition {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

td {
    color: var(--stone-600);
    padding-top: 12px;
    padding-bottom: 12px;
    padding-left: 32px;
    padding-right: 32px;
    border-bottom: 1px solid var(--stone-150);
}

.last-value {
    border-bottom: none;
}

.table-value {
    color: var(--brown-800);
    font-weight: 700;
}
@media (max-width: 376px) {
    .main-container {
        padding-left: 32px;
        padding-right: 32px;
    }
}

